fixed header and product text cutoff

--- a/fetchandfind/store/static/css/product-styles.css
+++ b/fetchandfind/store/static/css/product-styles.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(223, 223, 223);
-
+    width: 100%;
+    height: 100vh;
 }
 
 * { 
@@ -27,17 +28,20 @@ button {
 }
 
 header {
-    width: 100%;
+    margin-top: 0;
+    width: 95%;
     padding-left: 5%;
     background-color: rgb(46, 76, 137);
     height: 13vh;
     margin: 0;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 header h1 {
-    font-size: 190%;
+    font-size: 250%;
     color: rgb(236, 236, 236);
 }
 
@@ -97,6 +101,7 @@ header h1 {
     height: 60vh;
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
+    transition: 0.3s all ease-in-out;
 }
 
 .product:hover {
@@ -123,7 +128,7 @@ header h1 {
 .product img {
     object-fit: contain;
     width: 50%;
-    height: 20vh;
+    height: 17vh;
     border-radius: 10px;
     padding-top: 20%;
     padding-bottom: 20%;
